[gd_scene load_steps=2 format=3 uid="uid://4stiu7mwh18h"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Aprende Náhuatl"
horizontal_alignment = 1

[node name="ModuleTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Módulo 2: Fundamentos del Idioma"
horizontal_alignment = 1

[node name="Lesson2_1" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Lección 2.1: Saludos y Presentaciones"

[node name="Lesson2_2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Lección 2.2: Números y Contar"

[node name="Lesson2_3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Lección 2.3: Días de la Semana y Meses"

[node name="Progress" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Progreso: 0/3 lecciones completadas"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/Lesson2_1" to="." method="_on_lesson_2_1_pressed"]
[connection signal="pressed" from="VBoxContainer/Lesson2_2" to="." method="_on_lesson_2_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Lesson2_3" to="." method="_on_lesson_2_3_pressed"]
